--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="carousel-item">
                 <img class="d-block w-100" src="./image/medicine1.jpg" alt="3">
                 <div class="carousel-caption d-none d-sm-block">
-                    <h4 style="color:black">Pathology</h4>
+                    <h4 style="color:black">School health program</h4>
                     <p style="color:black">Health Care Services for you.</p>
                 </div>
             </div>
@@ -96,7 +96,7 @@
             <div class="carousel-item">
                 <img class="d-block w-100" src="./image/home_nursing.jpg" alt="6">
                 <div class="carousel-caption d-none d-sm-block">
-                    <h4>Home Nursing</h4>
+                    <h4>Care and Compassion</h4>
                     <p>Treatment from the comfort of your home</p>
                 </div>
             </div>
@@ -176,6 +176,53 @@
                     </div>
                 </div>
             </div>
+			
+			            <div  >
+              </div>
+			
+			            <div class="card-deck">
+                <div class="card bg-primary">
+                    <div class="card-header">
+                        <h4 class="text-white">24x7 Healthcare helpline for all</h4>
+                    </div>
+                    <img class="card-img-top img_body" src="./image/our-mission.jpg" alt="Card image cap">
+                    <div class="card-body card_body">
+                        <p class="card-text text-white text-justify">
+                            The Volunteers will have to perform a basic pre-screening of the kids to shortlist the kids who need further medical attention. The Volunteers would initially be briefed on the methods of Screening and also will be assisted by Senior Volunteers till the Volunteers are comfortable.</p>
+                    </div>
+                    <div class="card-footer border-top border-white">
+                        <!--                    <small class="text-muted">Last updated 3 mins ago</small>-->
+                        <div class="row">
+                            <div class="col text-left">
+                                <a href="donate.html"><button type="button" class="btn btn_prop" style="border: 2px solid yellow">DONATE</button></a>
+                            </div>
+                            <div class="col text-right">
+                                <a href="./healthcamps.html"><button type="button" class="btn btn_prop" style="border: 2px solid yellow">KNOW MORE</button></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-primary">
+                    <div class="card-header">
+                        <h4 class="text-white">Free consult with clinical specialists</h4>
+                    </div>
+                    <img class="card-img-top img_body" src="./image/child.jpg" alt="Card image cap">
+                    <div class="card-body card_body">
+                        <p class="card-text text-white text-justify">The School Health Programme is the only public sector programme specifically focused on school age children. Its focus is to address holistically the health and nutrition needs of children in a manner which fulfils the needs of today's lifestyle, hence activities like yoga and counselling facilities have been incorporated. </p>
+                    </div>
+                    <div class="card-footer border-top border-white">
+                        <!--                    <small class="text-muted">Last updated 3 mins ago</small>-->
+                        <div class="row">
+                            <div class="col text-left">
+                                <a href="donate.html"><button type="button" class="btn btn_prop" style="border: 2px solid yellow">DONATE</button></a>
+                            </div>
+                            <div class="col text-right">
+                                <a href="schoolhealth.html"><button type="button" class="btn btn_prop" style="border: 2px solid yellow">KNOW MORE</button></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
@@ -187,7 +234,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12 col-sm-12 col-xs-12 p-5 " style="background-color: #253746">
-                <h2 class="text-white mb-4">OUR LAST YEAR <span style="font-weight: bold; color: yellow;">WORK</span></h2>
+                <h2 class="text-white mb-4">2015 - 2019 <span style="font-weight: bold; color: yellow;">WORK</span></h2>
                 <ul class="text-white text-lowercase">
                     <li><b>21,144 PEOPLE</b> RECEIVED HEALTHCARE SERVICES THROUGH <b>21 </b>OPERATIONAL PROJECTS IN <b>104 REMOTE VILLAGES AND SLUMS</b>
                     </li>
@@ -202,6 +249,43 @@
                 </ul>
             </div>
         </div>
+		
+		        <div class="row">
+            <div class="col-lg-12 col-sm-12 col-xs-12 p-5 " style="background-color: #253746">
+                <h2 class="text-white mb-4">2020 <span style="font-weight: bold; color: yellow;">WORK</span></h2>
+                <ul class="text-white text-lowercase">
+                    <li><b>21,144 PEOPLE</b> RECEIVED HEALTHCARE SERVICES THROUGH <b>21 </b>OPERATIONAL PROJECTS IN <b>104 REMOTE VILLAGES AND SLUMS</b>
+                    </li>
+                    <li><b>1496 CHILDREN</b> BENEFITTED FROM SCHOOL HEALTH PROGRAMME AIMED AT BUILDING A HEALTH SEEKING NEXT GENERATION
+                    </li>
+                    <li>66% OF THE TOTAL BENEFICIARIES COVERED IN THE REPORTING PERIOD WERE WOMEN
+                    </li>
+                    <li><b>54</b> MULTI-SPECIALTY HEALTH CAMPS MET THE IMMEDIATE HEALTHCARE NEEDS OF<b> 6,465 PEOPLE</b>
+                    </li>
+                    <li>TOTAL OF <b>2346 FAMILIES </b>ARE BENEFITTED FROM HEALTH CAMP
+                    </li>
+                </ul>
+            </div>
+        </div>
+		
+				        <div class="row">
+            <div class="col-lg-12 col-sm-12 col-xs-12 p-5 " style="background-color: #253746">
+                <h2 class="text-white mb-4">2021 <span style="font-weight: bold; color: yellow;">WORK</span></h2>
+                <ul class="text-white text-lowercase">
+                    <li><b>21,144 PEOPLE</b> RECEIVED HEALTHCARE SERVICES THROUGH <b>21 </b>OPERATIONAL PROJECTS IN <b>104 REMOTE VILLAGES AND SLUMS</b>
+                    </li>
+                    <li><b>1496 CHILDREN</b> BENEFITTED FROM SCHOOL HEALTH PROGRAMME AIMED AT BUILDING A HEALTH SEEKING NEXT GENERATION
+                    </li>
+                    <li>66% OF THE TOTAL BENEFICIARIES COVERED IN THE REPORTING PERIOD WERE WOMEN
+                    </li>
+                    <li><b>54</b> MULTI-SPECIALTY HEALTH CAMPS MET THE IMMEDIATE HEALTHCARE NEEDS OF<b> 6,465 PEOPLE</b>
+                    </li>
+                    <li>TOTAL OF <b>2346 FAMILIES </b>ARE BENEFITTED FROM HEALTH CAMP
+                    </li>
+                </ul>
+            </div>
+        </div
+		
     </div>
     <div class="container-fluid mt-5 pb-5" style="background-color: #253746;border-top: 10px solid yellow">
         <script src="app/doctor.js"></script>
